--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -109,6 +109,8 @@ section {
 
 body {
 	line-height: 1;
+	color: #888;
+	font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 ol,
@@ -132,6 +134,42 @@ q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+
+strong {
+	font-weight: 400;
+}
+
+cite,
+em {
+	font-style: italic;
+}
+
+a:hover {
+	color: #a9b2b9;
+}
+
+.teaser a:hover h3 {
+	color: #a9b2b9;
+}
+
+a {
+	color: #648880;
+	text-decoration: none;
+}
+
+p a {
+	border-bottom: 1px solid #dfe2e5;
+}
+
+/*
+  ========================================
+  Custom styles
+  ========================================
+*/
+body {
+	color: #888;
+	font: 300 16px/22px "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 
@@ -159,6 +197,40 @@ h5,
 p {
 	margin-bottom: 22px;
 }
+
+
+h1,
+h2,
+h3,
+h4 {
+	color: #648880;
+}
+
+h1 {
+	font-size: 36px;
+	line-height: 44px;
+}
+
+h2 {
+	font-size: 24px;
+	line-height: 44px;
+}
+
+h3 {
+	font-size: 21px;
+}
+
+h4 {
+	font-size: 18px;
+}
+
+h5 {
+	color: #a9b2b9;
+	font-size: 14px;
+	font-weight: 400;
+	text-transform: uppercase;
+}
+
 
 .btn {
 	border-radius: 5px;
@@ -198,6 +270,39 @@ p {
 	float: left;
 	border: 4px solid #648880;
 	padding: 40px 0px 22px 0px;
+	font-size: 48px;
+	line-height: 44px;
+	font-weight: 100;
+	letter-spacing: .5px;
+	text-transform: uppercase;
+}
+
+.tagline {
+	margin: 66px 0 22px 0;
+	text-align: right;
+}
+
+.primary-nav {
+	font-size: 14px;
+	font-weight: 400;
+	letter-spacing: .5px;
+	text-transform: uppercase;
+}
+
+/*section hero*/
+
+.hero {
+	line-height: 44px;
+	text-align: center;
+}
+
+.hero h2 {
+	font-size: 36px;
+}
+
+.hero p {
+	font-size: 22px;
+	font-weight: 100;
 }
 
 /*
@@ -206,8 +311,16 @@ p {
   ========================================
 */
 
+.primary-footer {
+	color: #648880;
+	font-size: 14px;
+	padding-bottom: 44px;
+	padding-top: 44px;
+}
+
 .primary-footer small {
 	float: left;
+	font-weight: 400;
 }
 
 .primary-footer {
@@ -223,18 +336,31 @@ p {
 	width: 66.66%;
 }
 
-.col-1-3, .col-2-3{
+.col-1-3,
+.col-2-3 {
 	display: inline-block;
 	vertical-align: top;
 }
 
-.grid, .col-1-3, .col-2-3{
+.grid,
+.col-1-3,
+.col-2-3 {
 	padding-left: 15px;
 	padding-right: 15px;
 }
 
 .container,
 .grid {
-  margin: 0 auto;
-  width: 960px;
+	margin: 0 auto;
+	width: 960px;
+}
+
+/*
+  ========================================
+  Navigation
+  ========================================
+*/
+
+.nav {
+	text-align: right;
 }
