--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -108,7 +108,7 @@ section {
 }
 
 body {
-	line-height: 1;
+	background: #293f50;
 	color: #888;
 	font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -236,16 +236,24 @@ h5 {
 	border-radius: 5px;
 	display: inline-block;
 	margin: 0;
+	color: #fff;
+	cursor: pointer;
+	font-weight: 400;
+	letter-spacing: .5px;
+	text-transform: uppercase;
 }
 
 .btn-alt {
 	border: 1px solid #dfe2e5;
 	padding: 10px 30px;
+	border: 1px solid #fff;
+	
 }
 
-.hero {
-	padding: 22px 80px 66px 80px;
-}
+.btn-alt:hover {
+	background: #fff;
+	color: #648880;
+  }
 
 /*
   ========================================
@@ -294,6 +302,8 @@ h5 {
 .hero {
 	line-height: 44px;
 	text-align: center;
+	color: #fff;
+	padding: 22px 80px 66px 80px;
 }
 
 .hero h2 {
@@ -329,12 +339,12 @@ h5 {
 }
 
 .col-1-3 {
-	width: 32.33%;
+	width: 32%;
 }
 
-.col-2-3 {
-	width: 66.66%;
-}
+/* .col-2-3 {
+		width: 66.66%;
+} */
 
 .col-1-3,
 .col-2-3 {
@@ -364,3 +374,25 @@ h5 {
 .nav {
 	text-align: right;
 }
+
+.primary-header a,
+.primary-footer a {
+  color: #fff;
+}
+
+.primary-header a:hover,
+.primary-footer a:hover {
+  color: #648880;
+}
+
+/*
+  ========================================
+  Rows
+  ========================================
+*/
+
+.row {
+	background: #fff;
+	min-width: 960px;
+	padding: 66px 0 44px 0;
+  }
