--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -247,13 +247,13 @@ h5 {
 	border: 1px solid #dfe2e5;
 	padding: 10px 30px;
 	border: 1px solid #fff;
-	
+
 }
 
 .btn-alt:hover {
 	background: #fff;
 	color: #648880;
-  }
+}
 
 /*
   ========================================
@@ -377,12 +377,12 @@ h5 {
 
 .primary-header a,
 .primary-footer a {
-  color: #fff;
+	color: #fff;
 }
 
 .primary-header a:hover,
 .primary-footer a:hover {
-  color: #648880;
+	color: #648880;
 }
 
 /*
@@ -391,8 +391,35 @@ h5 {
   ========================================
 */
 
+.row,
+.row-alt {
+	min-width: 960px;
+}
+
+
 .row {
 	background: #fff;
-	min-width: 960px;
 	padding: 66px 0 44px 0;
+}
+
+.row-alt {
+	background: #cbe2c1;
+	background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
+	background: -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
+	background: linear-gradient(to right, #a1d3b0, #f6f1d3);
+	padding: 44px 0 22px 0;
+  }
+
+  /*
+  ========================================
+  Leads
+  ========================================
+*/
+
+.lead {
+	text-align: center;
+  }
+  .lead p {
+	font-size: 21px;
+	line-height: 33px;
   }
