--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -423,3 +423,14 @@ h5 {
 	font-size: 21px;
 	line-height: 33px;
   }
+
+
+.nav li{
+	display: inline-block;
+	margin: 0 10px;
+	vertical-align: top;
+}
+
+.nav li:last-child {
+	margin-right: 0;
+  }
