--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -429,3 +429,21 @@ h5 {
 .nav li:last-child {
 	margin-right: 0;
   }
+
+  /*
+  ========================================
+  Speakers
+  ========================================
+*/
+  
+.speaker-info {
+	border: 1px solid #dfe2e5;
+	border-radius: 5px;
+	margin-top: 88px;
+	padding: 22px 0;
+	text-align: center;
+  }
+
+  .speaker {
+	margin-bottom: 44px;
+  }
