add images in teaser section

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -430,6 +430,14 @@ h5 {
 	margin-right: 0;
   }
 
+  .teaser img {
+	border-radius: 5px;
+	display: block;
+	margin-bottom: 22px;
+	max-width: 100%
+  }
+
+
   /*
   ========================================
   Speakers
