--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -403,9 +403,9 @@ h5 {
 	background: -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
 	background: linear-gradient(to right, #a1d3b0, #f6f1d3);
 	padding: 44px 0 22px 0;
-  }
+}
 
-  /*
+/*
   ========================================
   Leads
   ========================================
@@ -413,14 +413,15 @@ h5 {
 
 .lead {
 	text-align: center;
-  }
-  .lead p {
+}
+
+.lead p {
 	font-size: 21px;
 	line-height: 33px;
-  }
+}
 
 
-.nav li{
+.nav li {
 	display: inline-block;
 	margin: 0 10px;
 	vertical-align: top;
@@ -430,20 +431,35 @@ h5 {
 	margin-right: 0;
   }
 
-  /*
+  .teaser img {
+	border-radius: 5px;
+	display: block;
+	margin-bottom: 22px;
+	max-width: 100%
+  }
+
+
+/*
   ========================================
   Speakers
   ========================================
 */
-  
+
 .speaker-info {
 	border: 1px solid #dfe2e5;
 	border-radius: 5px;
 	margin-top: 88px;
-	padding: 22px 0;
+	padding-bottom: 22px;
 	text-align: center;
-  }
+}
 
-  .speaker {
+.speaker {
 	margin-bottom: 44px;
-  }
+}
+
+.speaker-info img {
+	border-radius: 50%;
+	height: 130px;
+	margin: -66px 0 22px 0;
+	vertical-align: top;
+}
