correct file paths

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -187,7 +187,7 @@ body {
 	padding-left: 30px;
 	padding-right: 30px;
 	width: 960px;
-	/* border: 2px solid red; */
+	border: 2px solid red;
 }
 
 h1,
